# Clutterbot-MoveIt2-Assignment

./: README.md
.github/workflows/: ci.yml
my_moveit/: CMakeLists.txt  package.xml
my_moveit/src/: misc.txt  my_moveit.cpp  my_node_interface.cpp  obs_planner.cpp  planner_load.cpp  readme.txt  test_node101.cpp  traj_process.cpp  traj_process.hpp
